    with the operator [] in addr. For example: node.field[node.case]
  * Scope in INI can now use full address as name instead of simple fieldname.
    It places the scope at the written address.
  * Add bunny_real_width & bunny_real_height macros in placement.h for C11.
    They compute the real size on screen of window and clipable elements.

  * t_bunny_display now take a non const pointer.
    **Compatibility break!**

  * t_bunny_error become t_bunny_network_error in network.h
    **Compatibility break!**

  * LAST_ERROR become LAST_NETWORK_ERROR in network.h
    **Compatibility break!**

  * Change array field to data in t_bunny_pool.
    **Compatibility break!**

  * Put pool_get/getv and pool_release in compat.h, bring a better way to alloc/free,
    with bunny_pool_new and bunny_pool_free. No id is required anymore.
  * Bunny_pool_size is now bunny_pool_capacity, which return the max amount of element in pool.
    The new bunny_pool_size return how many busy elements there is in pool.
    **Compatibility break!**
  * Put bunny_pool_free_elem and bunny_pool_occupied_elem in compat.h
  * User data in pool are not constant anymore.
  * You don't need to use bunny_thread_wait_completion anymore after a list/map/vector/pool_fast_foreach.
  * You don't need to send a index variable to bunny_pool_foreach anymore.
    Same for vector and list.
    **Compatibility break!**
  * Fix GREY macro to GRAY, same for ALPHA_GREY. Old version available in compat.h
  * Remove the const specifier in every fast_foreach functions for the additional parameter..
  * Remove the const specifier in thread_foreach and thread_push for the additional parameter.

  * A new t_bunny_error type appeir and is an enumeration of errors that can be made by bunny functions. The type is in error.h.
  * A new enumeration value LAST_ERROR appeir and is a value of t_bunny_error in error.h
  * Every functions of the bunny library now set errno on error.